[project]
name = "cratemate"
version = "1.4.0"
description = "Smart music file organizer for DJs"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediafile>=0.12.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cratemate = "cratemate:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cratemate"]
