[project]
name = "cratemate"
version = "1.4.1"
description = "Smart music file organizer for DJs"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Zack Lagerstrom" },
]
keywords = ["music", "dj", "metadata", "organizer", "spotify", "id3", "flac", "mp3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "mediafile>=0.12.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/zarrebarre/CrateMate"
Repository = "https://github.com/zarrebarre/CrateMate"
Issues = "https://github.com/zarrebarre/CrateMate/issues"

[project.scripts]
cratemate = "cratemate:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cratemate"]
